src/LineChart.css
.linechart {
  margin-top: 1em;
  margin-bottom: 1em;
}

.linechart_path {
  stroke-width: 3;
  fill: none;
}

.linechart_path_p {
  stroke: #2196F3;
}

.linechart_path_m {
  stroke: #FF0000;
}

.linechart_point {
  fill: none;
  stroke-width: 3;
  stroke: darkgrey;
}

.linechart_area_p {
  fill: #64B5F6;
  stroke: none;
  opacity: .4;
}

.linechart_area_m {
  fill: red;
  stroke:none;
  opacity: .2;
}

rect.linechart_label_p, rect.linechart_label_m, rect.linechart_label_x, rect.linechart_label_xdatetick, rect.linechart_label_s {
 fill: #FFF;
}

rect.linechart_label_p_hover, text.linechart_label_p {
 fill: #64B5F6;
}

rect.linechart_label_m_hover, text.linechart_label_m {
 fill: red;
}

rect.linechart_label_x_hover {
 fill: black;
}

text.linechart_label_x {
  fill: black;
}

text.linechart_label_s, text.linechart_label_xdatetick {
  fill: lightgrey;
}

text.linechart_label_p_hover, text.linechart_label_m_hover, text.linechart_label_x_hover {
 fill: white;
 font-weight: bold;
}

.hoverline {
  stroke: #7D95B6;
  stroke-width: 1;
}

.hoverline_above {
  stroke: green;
  stroke-width: 4;
}

.hoverline_below {
  stroke: red;
  stroke-width: 4;
}

.tickline {
  stroke: #bdc3c7;
  stroke-width: 1;
}

